--- a/styles/index.css
+++ b/styles/index.css
@@ -1,102 +1,28 @@
 /* 
-Color Pallete
+Navbar
 */
+#home {
+  background-color: var(--teal);
+}
 
-:root {
-  --teal: rgba(112, 214, 255, 1);
-  --fuschia: rgba(255, 112, 166, 1);
-  --orange: rgba(255, 151, 112, 1);
-  --melon: rgba(255, 214, 112, 1);
-  --yellow: rgba(233, 255, 112, 1);
-  --black: #423e3b;
+.navbar-container {
+  position: absolute;
+  margin: 20px;
+  width: 90%;
+}
 
-  --teal-lt: rgba(140, 245, 250, 1);
-  --fuschia-lt: rgba(255, 135, 205, 1);
-  --orange-lt: rgba(255, 139, 135, 1);
-  --melon-lt: rgba(255, 191, 135, 1);
-  --yellow-lt: rgba(255, 241, 135, 1);
-
-  --teal-dk: rgba(81, 188, 250, 1);
-  --fuschia-dk: rgba(246, 80, 135, 1);
-  --orange-dk: rgba(246, 136, 84, 1);
-  --melon-dk: rgba(246, 211, 84, 1);
-  --yellow-dk: rgba(211, 246, 84, 1);
-
-  /* SCSS Gradient */
-  --gradient-top: linear-gradient(
-    0deg,
-    #70d6ffff,
-    #ff70a6ff,
-    #ff9770ff,
-    #ffd670ff,
-    #e9ff70ff
-  );
-  --gradient-right: linear-gradient(
-    90deg,
-    #70d6ffff,
-    #ff70a6ff,
-    #ff9770ff,
-    #ffd670ff,
-    #e9ff70ff
-  );
-  --gradient-bottom: linear-gradient(
-    180deg,
-    #70d6ffff,
-    #ff70a6ff,
-    #ff9770ff,
-    #ffd670ff,
-    #e9ff70ff
-  );
-  --gradient-left: linear-gradient(
-    270deg,
-    #70d6ffff,
-    #ff70a6ff,
-    #ff9770ff,
-    #ffd670ff,
-    #e9ff70ff
-  );
-  --gradient-top-right: linear-gradient(
-    45deg,
-    #70d6ffff,
-    #ff70a6ff,
-    #ff9770ff,
-    #ffd670ff,
-    #e9ff70ff
-  );
-  --gradient-bottom-right: linear-gradient(
-    135deg,
-    #70d6ffff,
-    #ff70a6ff,
-    #ff9770ff,
-    #ffd670ff,
-    #e9ff70ff
-  );
-  --gradient-top-left: linear-gradient(
-    225deg,
-    #70d6ffff,
-    #ff70a6ff,
-    #ff9770ff,
-    #ffd670ff,
-    #e9ff70ff
-  );
-  --gradient-bottom-left: linear-gradient(
-    315deg,
-    #70d6ffff,
-    #ff70a6ff,
-    #ff9770ff,
-    #ffd670ff,
-    #e9ff70ff
-  );
-  --gradient-radial: radial-gradient(
-    #70d6ffff,
-    #ff70a6ff,
-    #ff9770ff,
-    #ffd670ff,
-    #e9ff70ff
-  );
-  --prompt-font: 'Prompt', sans-serif;
-  --ubuntu-font: 'Ubuntu Sans Mono', monospace;
-  --josefin-font: 'Josefin Sans', sans-serif;
+nav {
+  background-color: rgba(112, 214, 255, 0.7);
+  display: flex;
+  margin: 0 0;
+  padding: 0 0;
+  height: 20vh;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  color: var(--black);
+  box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.5);
 }
 
 .navbar-left {
@@ -114,53 +40,31 @@ Color Pallete
   margin-right: 20px;
 }
 
-.navbar-link span {
-  height: 100%;
-  font-size: 130px;
-  display: flex;
-  align-items: center;
-  margin-left: 2px;
-}
-
-/* .navbar-left > .navbar-link:hover span {
-  transform: skewX(-85deg);
-} */
-
-.logo-box {
-  background: blue;
-  height: 100px;
-  width: 100px;
-}
-
-.logo-box-bg {
-  height: 115px;
-  width: 300px;
-}
-
 .navbar-right {
   /* margin: 0 0; */
   padding: 0 0;
   display: flex;
   justify-content: space-around;
   list-style-type: none;
-  min-width: 35%;
-  height: 50%;
+  width: 50%;
+  height: 40%;
   padding-bottom: 10px;
   margin: 55px 0 0 0;
 }
 
 .navbar-right li {
-  background-color: var(--fuschia);
   height: 100%;
-  margin: 0 0;
+  margin: 20px 10px 0px;
   padding: 0 0;
-  width: 20%;
+  width: 30%;
   display: flex;
   justify-content: center;
+  align-items: flex-end;
 }
 
-.navbar-right li:hover {
-  background-color: var(--fuschia-dk);
+.navbar-right li:hover,
+.dropdown:hover .dropdown-btn {
+  border-bottom: 1px solid var(--teal);
 }
 
 li .navbar-link {
@@ -173,36 +77,101 @@ li .navbar-link {
 }
 
 .navbar-link {
-  color: var(--teal);
-  /* text-decoration-thickness: ; */
+  color: var(--yellow);
   height: 40%;
   text-decoration: none;
 }
 
 .navbar-link:hover {
-  color: var(--teal-lt);
+  color: var(--yellow-dk);
 }
 
-/* .navbar-right li:hover {
-  background-color: var(--fuschia);
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropdown-btn {
+  font-size: inherit;
+  display: flex;
+
   height: 100%;
-  margin: 0 0;
-  padding: 0 0;
-} */
+  border: none;
+  outline: none;
+  display: flex;
+  width: 200px;
+  justify-content: center;
+  align-items: center;
+
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  /* margin: 0; Important for vertical align on mobile phones */
+}
+
+.drop-icon {
+  /* background-color: #bbb; */
+  margin-left: -80px;
+  height: 24px;
+  width: 24px;
+  fill: var(--yellow);
+  /* z-index: 10; */
+}
+
+/*  make sure the navbar-link is visible inside the dropdown-btn */
+.dropdown-btn .navbar-link {
+  color: var(--yellow);
+  height: 42px;
+  margin-left: -50px;
+}
+
+.nav-link + .drop-icon {
+  height: 20px;
+  width: 20px;
+  fill: var(--teal);
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: var(--teal);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+  border-bottom: 0.8px solid var(--teal-dk);
+  color: var(--teal-dk);
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /*
-Hero Banner section
+Hero Banner
 */
 
 .hero-banner {
-  /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/pexels-mark-glancy-721708-1564506.jpeg"); */
-
   background-image: linear-gradient(
       rgba(255, 112, 166, 0.4),
       rgba(255, 112, 166, 0.7)
     ),
     url('../images/pexels-mark-glancy-721708-1564506.jpeg');
-  height: 60%;
+  height: 100vh;
 
   background-position: center;
   background-repeat: no-repeat;
@@ -210,25 +179,34 @@ Hero Banner section
   position: relative;
 
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hero-text-board {
+  margin-left: 20px;
+  height: 60%;
+  margin-top: 200px;
   color: var(--melon);
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.1);
   width: 34%;
   display: flex;
   flex-direction: column;
-  padding: 10px 15px;
+  padding: 40px 15px;
+  justify-content: flex-start;
 }
 
-.banner-heading {
+.heading-primary {
   font-weight: 800;
   font-size: 30px;
   text-align: center;
+
+  margin-bottom: 40px;
 }
 
-.hero-text-board > p {
+.heading-secondary {
   padding: 0 50px;
+  margin-bottom: 40px;
 }
 
 .hero-text-board > button {
@@ -247,26 +225,61 @@ Hero Banner section
   border-color: var(--teal);
 }
 
-/*
-bg - video / stories section
-*/
-.stories-section {
-  background-color: var(--melon);
-  /* height: 500px; */
+.hero-text-board .cta-link {
+  text-decoration: none;
+  color: var(--yellow-dk);
+}
+
+.search-bar {
+  position: absolute;
+  right: 100px;
+  top: 75px;
+  width: 50px;
+  height: 50px;
+  background-color: var(--teal);
   display: flex;
-  height: 80%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 40%;
+  border: solid 1px var(--fuschia);
+  box-shadow: var(--shadow-md);
+}
+
+.search-icon {
+  height: 2rem;
+  width: 2rem;
+  fill: var(--fuschia);
+}
+
+.search-bar:hover {
+  background-color: var(--teal-dk);
+  border: solid 1px var(--fuschia-dk);
+}
+
+.search-bar:hover .search-icon {
+  fill: var(--fuschia-dk);
+}
+/*
+bg - video / about section
+*/
+.about-section {
+  background-color: var(--melon);
+  display: flex;
+  height: 100vh;
   position: relative;
+  margin-bottom: 200px;
 }
 
 .bg-video {
   position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
+  top: 50px;
+  left: 50px;
+  right: 50px;
+  bottom: 50px;
+  height: 90%;
+  width: 90%;
   z-index: 10;
   opacity: 0.15;
-  width: 100%;
 }
 
 .bg-video-content {
@@ -275,6 +288,221 @@ bg - video / stories section
   object-fit: cover;
 }
 
-.story-board {
+.about-board {
   z-index: 12;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 200px;
+}
+
+.about-board h4 {
+  font-size: 50px;
+  margin: 40px auto;
+  color: var(--fuschia);
+  border-bottom: 4px double var(--teal);
+  padding-bottom: 20px;
+}
+
+.about-board p {
+  width: 50%;
+  padding-right: 40px;
+  border-right: 4px double var(--teal);
+}
+
+.about-board h6 {
+  font-size: 50px;
+  margin: 40px auto;
+  color: var(--fuschia);
+  padding-bottom: 20px;
+  text-shadow: 1px 2px var(--teal);
+}
+
+/*  PUPPIES SECTION  */
+.puppies {
+  width: 100%;
+  height: 100%;
+  background-color: var(--teal);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 60px 0;
+}
+
+.puppy-row {
+  height: 100%;
+  width: 80%;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  margin-bottom: 40px;
+}
+
+/* PUPPY CARD */
+
+.puppy-card {
+  width: 20%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  box-shadow: var(--shadow-md);
+}
+
+.puppy-card img {
+  width: 100%;
+  height: 60%;
+}
+
+.puppy-card .puppy-info {
+  background-color: var(--fuschia);
+  box-shadow: var(--shadow-md);
+}
+
+.puppy-info h4,
+.puppy-info p {
+  margin: 5px;
+}
+
+.puppy-info strong {
+}
+
+.card-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-footer a {
+  font-size: 14px;
+  text-decoration: none;
+  color: var(--teal);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 5px;
+}
+
+.more-icon {
+  width: 20px;
+  height: 20px;
+  fill: #bbb;
+}
+
+.heart-icon {
+  width: 20px;
+  height: 20px;
+  fill: #bbb;
+}
+
+/* BREEDS LIST section */
+
+.breeds-section {
+  margin-top: 30px;
+  padding-top: 40px;
+  height: 100%;
+  width: 100%;
+  /* margin: 0 0; */
+  padding: 0 0;
+  background-color: rgba(51, 65, 79, 0.75);
+  display: flex;
+  justify-content: center;
+  /* border-bottom: 0.8px solid var(--black); */
+}
+
+table {
+  table-layout: fixed;
+  width: 60%;
+  border-collapse: collapse;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+caption {
+  margin-bottom: 30px;
+  font-size: 28px;
+  font-weight: 600;
+  text-align: start;
+  padding: 20px 20px 20px 20px;
+  border-bottom: 0.8px solid var(--black);
+}
+
+td {
+  /* background-color: aliceblue; */
+  padding: 10px;
+  font-size: 12px;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+td a {
+  text-decoration: none;
+  color: #fff;
+}
+
+td:hover {
+  border: 0.8px solid var(--fuschia);
+}
+
+td:hover a {
+  color: var(--teal);
+}
+
+td:hover a:visited {
+  color: darkgray;
+}
+
+footer {
+  background-color: rgba(51, 65, 79, 0.75);
+  /* background-color: beige; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0 0 0;
+}
+
+.bottom-nav {
+  list-style: none;
+  display: flex;
+  width: 50%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-size: 12px;
+  letter-spacing: 1.3px;
+  border-top: 0.8px solid var(--black);
+  align-items: center;
+  padding-top: 20px;
+  /* margin-top: 20px; */
+  /* background-color: #fff; */
+}
+
+.bottom-nav .nav-link:link,
+.bottom-nav .nav-link:visited {
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  padding: 1.5rem;
+  display: block;
+  transition: all 0.2s;
+}
+
+.bottom-nav .nav-link:hover,
+.bottom-nav .nav-link:active {
+  background-color: rgba(51, 65, 79, 0.15);
+  border-bottom: 0.8px solid var(--fuschia);
+  transform: translateY(-3px);
+  color: var(--teal);
+}
+
+.copyright {
+  font-size: 14px;
+  color: var(--black);
+  margin-top: 40px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  width: 70%;
+  margin-bottom: 30px;
 }
