--- a/styles/signup.css
+++ b/styles/signup.css
@@ -258,16 +258,28 @@ input[type='password']:focus .password-icon {
 }
 
 .social-links-list {
-  background-color: #ffff1c;
-  height: ;
-  width: 100%;
+  /* background-color: #ffff1c; */
+  height: 40px;
+  width: 40%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
 
+.social-wrapper p {
+  font-size: 13px;
+  color: #bbb;
+  margin: 30px 0px;
+}
+
 .social-links-list a {
+  border: 0.8px solid #bbb;
+  text-decoration: none;
+  padding: 10px 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .google-form-wrapper a:hover {
@@ -275,11 +287,10 @@ input[type='password']:focus .password-icon {
   color: var(--black);
 }
 
-.google-icon {
+.social-link .google-icon {
   height: 1.25rem;
   width: 1.25rem;
   fill: url(#gradient-vertical);
-  margin-right: 10px;
 }
 
 .apple-icon {
